--- a/.github/README.md.hbs
+++ b/.github/README.md.hbs
@@ -4,7 +4,7 @@ Build Status
 | Repository | CircleCI | Appveyor | Codecov |
 |:---------- |:-------- |:-------- |:------- |
 {{#each projects}}
-| **[{{this.name}}](https://github.com/{{this.repo.user}}/{{this.repo.name}})** | [![CircleCI](https://circleci.com/gh/{{this.repo.user}}/{{this.repo.name}}/tree/master.svg?style=svg)](https://circleci.com/gh/{{this.repo.user}}/{{this.repo.name}}/tree/master) | [![Appveyor CI](https://ci.appveyor.com/api/projects/status/github/{{this.repo.user}}/{{this.repo.name}}?branch=master&svg=true)](https://ci.appveyor.com/project/heroku/{{this.repo.name}}/branch/master) | [![Codecov](https://codecov.io/gh/{{this.repo.user}}/{{this.repo.name}}/branch/master/graph/badge.svg)](https://codecov.io/gh/{{this.repo.user}}/{{this.repo.name}}) | [![DeepScan Grade](https://deepscan.io/api/projects/1805/branches/7861/badge/grade.svg)](https://deepscan.io/dashboard/#view=project&pid=1805&bid=7861) |
+| **[{{this.name}}](https://github.com/{{this.repo.user}}/{{this.repo.name}})** | [![CircleCI](https://circleci.com/gh/{{this.repo.user}}/{{this.repo.name}}/tree/master.svg?style=svg)](https://circleci.com/gh/{{this.repo.user}}/{{this.repo.name}}/tree/master) | [![Appveyor CI](https://ci.appveyor.com/api/projects/status/github/{{this.repo.user}}/{{this.repo.name}}?branch=master&svg=true)](https://ci.appveyor.com/project/{{this.appveyor}}/branch/master) | [![Codecov](https://codecov.io/gh/{{this.repo.user}}/{{this.repo.name}}/branch/master/graph/badge.svg)](https://codecov.io/gh/{{this.repo.user}}/{{this.repo.name}}) | [![DeepScan Grade](https://deepscan.io/api/projects/1805/branches/7861/badge/grade.svg)](https://deepscan.io/dashboard/#view=project&pid=1805&bid=7861) |
 {{/each}}
 
 Dependency Status
@@ -19,8 +19,17 @@ Dependency Status
 Download Stats
 ==============
 
-| Repository | GitHub stars | Week | Month | Year | Total |
-|:---------- |:------------ |:---  |:----- |:---- |:----- |
+| Repository | Week | Month | Year | Total |
+|:---------- |:----- |:---- |:----- |
 {{#each projects}}
-| **[{{this.name}}](https://github.com/{{this.repo.user}}/{{this.repo.name}})** | [![GitHub stars](https://img.shields.io/github/stars/{{this.repo.user}}/{{this.repo.name}}.svg?style=social&label=Stars)]() | [![Downloads/week](https://img.shields.io/npm/dw/{{this.name}}.svg)](https://npmjs.org/package/{{this.name}}) | [![Downloads/month](https://img.shields.io/npm/dm/{{this.name}}.svg)](https://npmjs.org/package/{{this.name}}) | [![Downloads/year](https://img.shields.io/npm/dy/{{this.name}}.svg)](https://npmjs.org/package/{{this.name}}) | [![Downloads/total](https://img.shields.io/npm/dt/{{this.name}}.svg)](https://npmjs.org/package/{{this.name}}) |
+| **[{{this.name}}](https://github.com/{{this.repo.user}}/{{this.repo.name}})** | [![Downloads/week](https://img.shields.io/npm/dw/{{this.name}}.svg)](https://npmjs.org/package/{{this.name}}) | [![Downloads/month](https://img.shields.io/npm/dm/{{this.name}}.svg)](https://npmjs.org/package/{{this.name}}) | [![Downloads/year](https://img.shields.io/npm/dy/{{this.name}}.svg)](https://npmjs.org/package/{{this.name}}) | [![Downloads/total](https://img.shields.io/npm/dt/{{this.name}}.svg)](https://npmjs.org/package/{{this.name}}) |
+{{/each}}
+
+GitHub Stats
+============
+
+| Repository | Issues | Pull Requests | Stars |
+|:---------- |:------ |:------------  |:----- |
+{{#each projects}}
+| **[{{this.name}}](https://github.com/{{this.repo.user}}/{{this.repo.name}})** | [![GitHub Issues](https://img.shields.io/github/issues/{{this.repo.user}}/{{this.repo.name}}.svg)](https://github.com/{{this.repo.user}}/{{this.repo.name}}/issues) | [![GitHub Pull Requests](https://img.shields.io/github/issues-pr/{{this.repo.user}}/{{this.repo.name}}.svg)](https://github.com/{{this.repo.user}}/{{this.repo.name}}/pulls) | [![GitHub stars](https://img.shields.io/github/stars/{{this.repo.user}}/{{this.repo.name}}.svg?style=social&label=Stars)](https://github.com/{{this.repo.user}}/{{this.repo.name}}) |
 {{/each}}
