--- a/.github/README.md.hbs
+++ b/.github/README.md.hbs
@@ -13,16 +13,7 @@ Dependency Status
 | Repository | Version | Greenkeeper | Snyk |
 |:---------- |:------- |:----------- |:---- |
 {{#each projects}}
-| **[{{this.name}}](https://github.com/{{this.repo.user}}/{{this.repo.name}})** | [![Version](https://img.shields.io/npm/v/{{this.name}}.svg)](https://npmjs.org/package/{{this.name}}) | [![Greenkeeper](https://badges.greenkeeper.io/{{this.repo.user}}/{{this.repo.name}}.svg)](https://greenkeeper.io/) | [![Known Vulnerabilities](https://snyk.io/test/npm/{{this.name}}/badge.svg)](https://snyk.io/test/npm/{{this.name}}) |
-{{/each}}
-
-Download Stats
-==============
-
-| Repository | Week | Month | Year | Total |
-|:---------- |:----- |:---- |:---- |:----- |
-{{#each projects}}
-| **[{{this.name}}](https://github.com/{{this.repo.user}}/{{this.repo.name}})** | [![Downloads/week](https://img.shields.io/npm/dw/{{this.name}}.svg)](https://npmjs.org/package/{{this.name}}) | [![Downloads/month](https://img.shields.io/npm/dm/{{this.name}}.svg)](https://npmjs.org/package/{{this.name}}) | [![Downloads/year](https://img.shields.io/npm/dy/{{this.name}}.svg)](https://npmjs.org/package/{{this.name}}) | [![Downloads/total](https://img.shields.io/npm/dt/{{this.name}}.svg)](https://npmjs.org/package/{{this.name}}) |
+| **[{{this.name}}](https://github.com/{{this.repo.user}}/{{this.repo.name}})** | [![Version](https://img.shields.io/npm/v/{{this.name}}.svg)](https://npmjs.org/package/{{this.name}}) | [![Greenkeeper](https://badges.greenkeeper.io/{{this.repo.user}}/{{this.repo.name}}.svg)](https://greenkeeper.io/) | [![Known Vulnerabilities](https://snyk.io/test/github/{{this.repo.user}}/{{this.repo.name}}/badge.svg)](https://snyk.io/test/github/{{this.repo.user}}/{{this.repo.name}}) |
 {{/each}}
 
 GitHub Stats
@@ -32,4 +23,13 @@ GitHub Stats
 |:---------- |:------ |:------------  |:----- |
 {{#each projects}}
 | **[{{this.name}}](https://github.com/{{this.repo.user}}/{{this.repo.name}})** | [![GitHub Issues](https://img.shields.io/github/issues/{{this.repo.user}}/{{this.repo.name}}.svg)](https://github.com/{{this.repo.user}}/{{this.repo.name}}/issues) | [![GitHub Pull Requests](https://img.shields.io/github/issues-pr/{{this.repo.user}}/{{this.repo.name}}.svg)](https://github.com/{{this.repo.user}}/{{this.repo.name}}/pulls) | [![GitHub stars](https://img.shields.io/github/stars/{{this.repo.user}}/{{this.repo.name}}.svg?style=social&label=Stars)](https://github.com/{{this.repo.user}}/{{this.repo.name}}) |
+{{/each}}
+
+Download Stats
+==============
+
+| Repository | Week | Month | Year | Total |
+|:---------- |:----- |:---- |:---- |:----- |
+{{#each projects}}
+| **[{{this.name}}](https://github.com/{{this.repo.user}}/{{this.repo.name}})** | [![Downloads/week](https://img.shields.io/npm/dw/{{this.name}}.svg)](https://npmjs.org/package/{{this.name}}) | [![Downloads/month](https://img.shields.io/npm/dm/{{this.name}}.svg)](https://npmjs.org/package/{{this.name}}) | [![Downloads/year](https://img.shields.io/npm/dy/{{this.name}}.svg)](https://npmjs.org/package/{{this.name}}) | [![Downloads/total](https://img.shields.io/npm/dt/{{this.name}}.svg)](https://npmjs.org/package/{{this.name}}) |
 {{/each}}
