fix: use shield style for circle

--- a/.github/README.md.hbs
+++ b/.github/README.md.hbs
@@ -4,7 +4,7 @@ Build Status
 | Repository | CircleCI | Appveyor | Codecov |
 |:---------- |:-------- |:-------- |:------- |
 {{#each projects}}
-| **[{{this.name}}](https://github.com/{{this.repo.user}}/{{this.repo.name}})** | [![CircleCI](https://circleci.com/gh/{{this.repo.user}}/{{this.repo.name}}/tree/master.svg?style=svg)](https://circleci.com/gh/{{this.repo.user}}/{{this.repo.name}}/tree/master) | [![Appveyor CI](https://ci.appveyor.com/api/projects/status/github/{{this.repo.user}}/{{this.repo.name}}?branch=master&svg=true)](https://ci.appveyor.com/project/{{this.appveyor}}/branch/master) | [![Codecov](https://codecov.io/gh/{{this.repo.user}}/{{this.repo.name}}/branch/master/graph/badge.svg)](https://codecov.io/gh/{{this.repo.user}}/{{this.repo.name}}) | [![DeepScan Grade](https://deepscan.io/api/projects/1805/branches/7861/badge/grade.svg)](https://deepscan.io/dashboard/#view=project&pid=1805&bid=7861) |
+| **[{{this.name}}](https://github.com/{{this.repo.user}}/{{this.repo.name}})** | [![CircleCI](https://circleci.com/gh/{{this.repo.user}}/{{this.repo.name}}/tree/master.svg?style=shield)](https://circleci.com/gh/{{this.repo.user}}/{{this.repo.name}}/tree/master) | [![Appveyor CI](https://ci.appveyor.com/api/projects/status/github/{{this.repo.user}}/{{this.repo.name}}?branch=master&svg=true)](https://ci.appveyor.com/project/{{this.appveyor}}/branch/master) | [![Codecov](https://codecov.io/gh/{{this.repo.user}}/{{this.repo.name}}/branch/master/graph/badge.svg)](https://codecov.io/gh/{{this.repo.user}}/{{this.repo.name}}) | [![DeepScan Grade](https://deepscan.io/api/projects/1805/branches/7861/badge/grade.svg)](https://deepscan.io/dashboard/#view=project&pid=1805&bid=7861) |
 {{/each}}
 
 Dependency Status
