--- a/.github/README.md.hbs
+++ b/.github/README.md.hbs
@@ -10,10 +10,10 @@ Build Status
 Dependency Status
 =================
 
-| Repository | Version | Greenkeeper | Snyk |
-|:---------- |:------- |:----------- |:---- |
+| Repository | Version | Snyk |
+|:---------- |:------- |:---- |
 {{#each projects}}
-| **[{{this.name}}](https://github.com/{{this.repo.user}}/{{this.repo.name}})** | [![Version](https://img.shields.io/npm/v/{{this.name}}.svg)](https://npmjs.org/package/{{this.name}}) | [![Greenkeeper](https://badges.greenkeeper.io/{{this.repo.user}}/{{this.repo.name}}.svg)](https://greenkeeper.io/) | [![Known Vulnerabilities](https://snyk.io/test/github/{{this.repo.user}}/{{this.repo.name}}/badge.svg)](https://snyk.io/test/github/{{this.repo.user}}/{{this.repo.name}}) |
+| **[{{this.name}}](https://github.com/{{this.repo.user}}/{{this.repo.name}})** | [![Version](https://img.shields.io/npm/v/{{this.name}}.svg)](https://npmjs.org/package/{{this.name}}) | [![Known Vulnerabilities](https://snyk.io/test/github/{{this.repo.user}}/{{this.repo.name}}/badge.svg)](https://snyk.io/test/github/{{this.repo.user}}/{{this.repo.name}}) |
 {{/each}}
 
 GitHub Stats
